--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
-#spring: 
-#  application: 
-#    name: zuul-service
-#  cloud:
-#    config:
-#      uri: http://rpm-elb-996808586.us-east-1.elb.amazonaws.com/rpm-config
+spring: 
+  application: 
+    name: zuul-service
+  cloud:
+    config:
+       uri: http://rpm-elb-996808586.us-east-1.elb.amazonaws.com/rpm-config
