--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,7 @@ hibernate.cfg.xml
 
 # target folder
 target/
+
+# config files (bootstrap.yml will stay on repo, but no need to update it)
+bootstrap.yml
+application.yml
