--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -9,5 +9,6 @@ eureka:
   instance:
     hostname: http://rpm-elb-996808586.us-east-1.elb.amazonaws.com/rpm-zuul/
     instance-id: ${spring.application.name}:${random.int}
+    preferIpAddress: true
     
 
