--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -7,8 +7,8 @@ spring:
 
 eureka:
   instance:
-    hostname: http://rpm-elb-996808586.us-east-1.elb.amazonaws.com/rpm-zuul/
-    instance-id: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
+    hostname: zuul-service
+    instance-id: ${spring.application.name}:${server.port}
     preferIpAddress: false
     
 
