--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -5,7 +5,9 @@ spring:
     config:
         uri: ${CONFIG_SERVICE_URL}
 
-    
 security:
   jwt:
     secret: ${RPM_JWT_SECRET}
+  zsign:
+    secret: ${RPM_ZUUL_ACCESS_HEADER}
+    salt: ${RPM_ZUUL_ACCESS_SALT}
