--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-test</artifactId>
+		    <version>2.1.1.RELEASE</version>
+		    <scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
