Altered configuration to set the default profile to local. Configured local profile to connect to config server at localhost:8888, while non-local deployments can connect to an environment defined URL. Updated Dockerfile with a command line argument to run the internal application in the dev profile. This implementation should be temporary, as we will need a more robust methodology for providing the profile when we have a prod profile to run within

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,4 +1,7 @@
-spring: 
+spring:
+  profiles:
+    active:
+    - local
   application: 
     name: zuul-service
   cloud:
@@ -11,3 +14,12 @@ security:
   zsign:
     secret: ${RPM_ZUUL_ACCESS_HEADER}
     salt: ${RPM_ZUUL_ACCESS_SALT}
+    
+---
+#Configuration settings that used when the local profile is active
+spring:
+  profiles: local
+  cloud:
+    config:
+      uri:
+      - http://localhost:8888
